--- a/index.html
+++ b/index.html
@@ -24,10 +24,86 @@
             <div class="title">Hey I am Mimic</div>
             <div class="desc"><i>a web developer</i></div>
         </div>
+        <section id="project" class="project-section">
+            <h2 class="project-section-header">These are some of my projects</h2>
 
+            <div class="projects-grid">
+                <a href="" class="project project-title">
+                    <img class="project-image" src="./img/tribute.jpg" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Tribute Page
+                        <span class="code">/&gt;</span>
+                      </p>
+                </a>
+                <a href="" class="project project-title">
+                    <img class="project-image" src="./img/random-quote-machine.png" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Random Quote Machine
+                        <span class="code">/&gt;</span>
+                      </p>
+                </a>
+                <a href="" class="#">
+                    <img class="project-image" src="./img/calc.png" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        JavaScript Calculator
+                        <span class="code">/&gt;</span>
+                      </p>
+                </a>
+                <a href="" class="project project-title">
+                    <img class="project-image" src="./img/map.jpg" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Map Data Across the Globe
+                        <span class="code">/&gt;</span>
+                      </p>
+                </a>
+                <a href="" class="project project-title">
+                    <img class="project-image" src="./img/wiki.png" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Wikipedia Viewer
+                        <span class="code">/&gt;</span>
+                      </p>
+                </a>
+                <a href="" class="project project-title">
+                    <img class="project-image" src="./img/tic-tac-toe.png" alt="project">
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Tic Tac Toe Game
+                        <span class="code">/&gt;</span>
+                    </p>
+                </a>
+        </section>
+        <section id="contact" class="contact-section">
+            <div class="contact-section-header">
+              <h2>Let's work together...</h2>
+              <p>How do you take your coffee?</p>
+            </div>
+            <div class="contact-links">
+              <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
+              <a id="profile-link" href="#" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+              <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
+              <a href="#" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+              <a href="#" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+            </div>
+          </section>
+          <footer>
+            <p>
+              **This is just a fake portfolio. All the projects and contact details
+              given are not real.
+            </p>
+            <p>
+              © Created for
+              <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
+            </p>
+          </footer>
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+        </script>
     </body>
 </html>
