--- a/index.html
+++ b/index.html
@@ -1,109 +1,144 @@
 <html>
-    <head>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/styles.css">
-        <title>Portfolio Website | Microverse Collaboration Exercise 3</title>
-    </head>
-    <body>
-        <div id="header">
-            <div class="row">
-                <div class="col-sm-9"></div>
-                <div class="col-sm-3">
-                    <div class="nav">
-                        <a href="#about">About</a>
-                        <a href="#work">Work</a>
-                        <a href="#contact">Contact</a>
-                    </div>
+
+<head>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Portfolio Website | Microverse Collaboration Exercise 3</title>
+</head>
+
+<body>
+    <div id="header">
+        <div class="row">
+            <div class="col-sm-9"></div>
+            <div class="col-sm-3">
+                <div class="nav">
+                    <a href="#about">About</a>
+                    <a href="#work">Work</a>
+                    <a href="#contact">Contact</a>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div id="about">
-            <div class="title">Hey I am Mimic</div>
-            <div class="desc"><i>a web developer</i></div>
-        </div>
-        <section id="project" class="project-section">
-            <h2 class="project-section-header">These are some of my projects</h2>
+    <div id="about">
+        <div class="title">Hey I am Mimic</div>
+        <div class="desc"><i>a web developer</i></div>
+    </div>
 
-            <div class="projects-grid">
-                <a href="" class="project project-title">
-                    <img class="project-image" src="./img/tribute.jpg" alt="project">
-                    <p class="project-title">
+    <section id="work" class="project-section">
+        <h2 class="project-section-header">These are some of my projects</h2>
+
+        <div class="row projects-grid">
+            <div class="col-sm-4">
+                <a href="" class="project project-item">
+                    <div class="img" style="background-image:url('./img/tribute.jpg'); background-repeat:no-repeat; background-size:cover; background-position:center center;"></div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         Tribute Page
                         <span class="code">/&gt;</span>
-                      </p>
+                    </div>
                 </a>
-                <a href="" class="project project-title">
-                    <img class="project-image" src="./img/random-quote-machine.png" alt="project">
-                    <p class="project-title">
+            </div>
+
+            <div class="col-sm-4">
+                <a href="" class="project project-item">
+                    <div class="img"
+                        style="background-image:url('./img/random-quote-machine.png'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+                    </div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         Random Quote Machine
                         <span class="code">/&gt;</span>
-                      </p>
+                    </div>
                 </a>
-                <a href="" class="#">
-                    <img class="project-image" src="./img/calc.png" alt="project">
-                    <p class="project-title">
+            </div>
+
+            <div class="col-sm-4">
+                <a href="" class="project-item">
+                    <div class="img"
+                        style="background-image:url('./img/calc.png'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+                    </div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         JavaScript Calculator
                         <span class="code">/&gt;</span>
-                      </p>
+                    </div>
                 </a>
-                <a href="" class="project project-title">
-                    <img class="project-image" src="./img/map.jpg" alt="project">
-                    <p class="project-title">
+            </div>
+
+            <div class="col-sm-4">
+                <a href="" class="project project-item">
+                    <div class="img"
+                        style="background-image:url('./img/map.jpg'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+                    </div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         Map Data Across the Globe
                         <span class="code">/&gt;</span>
-                      </p>
+                    </div>
                 </a>
-                <a href="" class="project project-title">
-                    <img class="project-image" src="./img/wiki.png" alt="project">
-                    <p class="project-title">
+            </div>
+
+            <div class="col-sm-4">
+                <a href="" class="project project-item">
+                    <div class="img"
+                        style="background-image:url('./img/wiki.png'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+                    </div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         Wikipedia Viewer
                         <span class="code">/&gt;</span>
-                      </p>
+                    </div>
                 </a>
-                <a href="" class="project project-title">
-                    <img class="project-image" src="./img/tic-tac-toe.png" alt="project">
-                    <p class="project-title">
+            </div>
+
+            <div class="col-sm-4">
+                <a href="" class="project project-item">
+                    <div class="img"
+                        style="background-image:url('./img/tic-tac-toe.png'); background-repeat:no-repeat; background-size:cover; background-position:center center;">
+                    </div>
+                    <div class="project-desc">
                         <span class="code">&lt;</span>
                         Tic Tac Toe Game
                         <span class="code">/&gt;</span>
-                    </p>
+                    </div>
                 </a>
-        </section>
-        <section id="contact" class="contact-section">
-            <div class="contact-section-header">
-              <h2>Let's work together...</h2>
-              <p>How do you take your coffee?</p>
             </div>
-            <div class="contact-links">
-              <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-              <a id="profile-link" href="#" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-              <a href="#" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter</a>
-              <a href="#" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-              <a href="#" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
-            </div>
-          </section>
-          <footer>
-            <p>
-              **This is just a fake portfolio. All the projects and contact details
-              given are not real.
-            </p>
-            <p>
-              © Created for
-              <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fab fa-free-code-camp"></i></a>
-            </p>
-          </footer>
-        <!-- JavaScript Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous">
+    </section>
+
+    <section id="contact" class="contact-section">
+        <div class="contact-section-header">
+            <h2>Let's work together...</h2>
+            <p><i>How do you take your coffee?</i></p>
+        </div>
+        <div class="contact-links">
+            <a href="#" target="_blank" class="link"><i class="fa fa-facebook-square"></i> Facebook</a>
+            <a id="profile-link" href="#" target="_blank" class="link"><i class="fa fa-github"></i>
+                GitHub</a>
+            <a href="#" target="_blank" class="link"><i class="fa fa-twitter"></i> Twitter</a>
+            <a href="#" class="link"><i class="fa fa-at"></i> Send a mail</a>
+            <a href="#" class="link"><i class="fa fa-phone"></i> Call me</a>
+        </div>
+    </section>
+
+    <footer id="footer" class="row">
+        <div class="col-sm-9 left">
+            **This is just a fake portfolio. All the projects and contact details
+            given are not real.
+        </div>
+        <div class="col-sm-3 right">
+            © Created for
+            <a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i class="fa fa-free-code-camp"></i></a>
+        </div>
+    </footer>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
-    </body>
+</body>
+
 </html>
